# OBX

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  python-app.yml  release.yml
examples/: demo_app.py  demo_issues.py
obx/benchmarks/: __init__.py  overhead.py
obx/cli/: __init__.py  main.py
obx/config/: __init__.py  config.py
obx/core/: __init__.py  context.py  events.py  types.py
obx/intelligence/: __init__.py  engine.py
obx/logic/: __init__.py  engine.py
obx/performance/: __init__.py  analyzer.py
obx/plugins/: __init__.py  registry.py
obx/recorder/: __init__.py  recorder.py
obx/reporting/: __init__.py  reporter.py
obx/runtime/: __init__.py  memory.py  tracer.py
obx/scoring/: __init__.py  engine.py
obx/shield/: __init__.py  crash_shield.py
tests/: test_obx.py
